fixed all integration and matrix tests for hsqldb, added separate plugin matrix test workflow