@@ -78,8 +78,8 @@ public class RangePartitionManager extends AbstractPartitionManager {
 
 
     @Override
-    public boolean validatePartitionGroupSetup( List<List<String>> partitionGroupQualifiers, long numPartitionGroups, List<String> partitionGroupNames, LogicalColumn partitionColumn ) {
-        super.validatePartitionGroupSetup( partitionGroupQualifiers, numPartitionGroups, partitionGroupNames, partitionColumn );
+    public List<List<String>> validateAdjustPartitionGroupSetup( List<List<String>> partitionGroupQualifiers, long numPartitionGroups, List<String> partitionGroupNames, LogicalColumn partitionColumn ) {
+        partitionGroupQualifiers = new ArrayList<>( super.validateAdjustPartitionGroupSetup( partitionGroupQualifiers, numPartitionGroups, partitionGroupNames, partitionColumn ) );
 
         if ( partitionColumn.type.getFamily() != PolyTypeFamily.NUMERIC ) {
             throw new GenericRuntimeException( "You cannot specify RANGE partitioning for a non-numeric type. Detected ExpressionType: " + partitionColumn.type + " for column: '" + partitionColumn.name + "'" );
@@ -138,7 +138,7 @@ public class RangePartitionManager extends AbstractPartitionManager {
                     contestingLowerBound = temp;
 
                     List<String> list = Stream.of( partitionGroupQualifiers.get( k + 1 ).get( 1 ), partitionGroupQualifiers.get( k + 1 ).get( 0 ) )
-                            .collect( Collectors.toList() );
+                            .toList();
                     partitionGroupQualifiers.set( k + 1, list );
 
                 } else if ( contestingUpperBound == contestingLowerBound ) {
@@ -154,7 +154,7 @@ public class RangePartitionManager extends AbstractPartitionManager {
 
         }
 
-        return true;
+        return partitionGroupQualifiers;
     }
 
 
@@ -227,7 +227,7 @@ public class RangePartitionManager extends AbstractPartitionManager {
 
         rowsAfter.add( unboundRow );
 
-        PartitionFunctionInfo uiObject = PartitionFunctionInfo.builder()
+        return PartitionFunctionInfo.builder()
                 .functionTitle( FUNCTION_TITLE )
                 .description( "Partitions data based on a defined numeric range. A partition is therefore responsible for all values residing in that range. "
                         + "INFO: Note that this partition function provides an 'UNBOUND' partition capturing all values that are not covered by one of the specified ranges." )
@@ -238,8 +238,6 @@ public class RangePartitionManager extends AbstractPartitionManager {
                 .rowsAfter( rowsAfter )
                 .headings( new ArrayList<>( Arrays.asList( "Partition Name", "MIN", "MAX" ) ) )
                 .build();
-
-        return uiObject;
     }
 
 
